--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src='papaparse.min.js'></script>
         <script src='index.js'></script>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body></body>
 </html>
